Closed Bug 1891866 Opened 1 year ago Closed 1 year ago

Clear mIsTopOfPage bit in flex item's ReflowInput

Categories

(Core :: Layout: Flexbox, defect)

defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox127 --- fixed

People

(Reporter: TYLin, Assigned: TYLin)

References

Details

Attachments

(1 file)

Currently, we don't clear mIsTopOfPage bit for flex items if their positions are not adjacent with container's content-box block-start edge. This might cause break-inside:avoid not honored on these flex items due to this check https://searchfox.org/mozilla-central/rev/23ad6bdb310c9a46e6f37885b0d88ec5da3c00f7/layout/generic/nsContainerFrame.cpp#2607-2609

Blocks: 1890238
Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/49173cd81959 Clear mIsTopOfPage for flex items if their positions are not adjacent with container's content-box block-start edge. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: