Bug 1891866 - Clear mIsTopOfPage for flex items if their positions are not adjacent with container's content-box block-start edge. r=dholbert

This fixed some WPT with `break-inside:avoid` on flex items.

Differential Revision: https://phabricator.services.mozilla.com/D207640